lib: add Divisor enum for setting baud rate
Add a divisor enum to help with readability and usability.

--- a/README.adoc
+++ b/README.adoc
@@ -32,7 +32,7 @@ fn main() {
               StickParity::DISABLE,
               Break::DISABLE,
               DMAMode::MODE0,
-              100,
+              Divisor::BAUD1200,
               );
     write!(&mut uart, "Hello, world!\n\r");
     loop {
